odrv_ws/log/build_2022-06-17_11-47-12/srvcli/stderr.log
  File "/home/ubuntu/odrv_ws/install/srvcli/lib/python3.8/site-packages/srvcli/service_member_function.py", line 91
    elif(request.axis == 0):
    ^
SyntaxError: invalid syntax

